Fix global state leak in gl_tests.

There is a global CommandBufferTaskExecutor that gets created if an
instance isn't provided. This task executor picks up the current command
line to create GpuPreferences on first use, which caused problems where
depending on what test ran first the GpuPreferences would be different
and later tests would fail.

Don't use the global task executor in gl_tests. Move and rename
InProcessGpuThreadHolder so that each test which needs it can
instantiate the object itself. Also enable
GLInProcessCommandBufferTest.CreateImage again.

Bug: 897456
Change-Id: Icdc307bd68453fdc2b898a9765a3f903b21fdfe8
Reviewed-on: https://chromium-review.googlesource.com/c/1298214
Commit-Queue: kylechar <kylechar@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#603143}